--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "dart_to_mips32_compiler",
   "version": "1.0.0",
   "description": "A tiny compiler that can compile simple dart code into MIPS-32 assembly, written in typescript",
-  "main": "index.ts",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx electron /src"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
     "tailwindcss": "^3.2.6"
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "typescript": "^4.9.5"
   }
 }
