--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tiny compiler that can compile simple dart code into MIPS-32 assembly, written in typescript",
   "main": "index.ts",
   "scripts": {
-    "live-compile": "tsc -w --outDir dist/ src/compiler.ts src/test.ts",
+    "live-compile": "tsc -w --outDir src/engine/dist/ src/engine/compiler.ts src/engine/test.ts",
     "test": "node dist/test.js"
   },
   "repository": {
